fix/size and color in loader

--- a/src/stylesheet/vars.css
+++ b/src/stylesheet/vars.css
@@ -12,7 +12,7 @@
   --active-blue: #4a56e2;
   --blue: #6e78e8;
   --pink: #ff6596;
-  --vector-color: #e7e5f2;
+  --vector-color: #e7e5f2
   --add-transaction-menu-color: rgba(255, 255, 255, 0.7);
   --transaction-underline-color: #dcdcdf;
   --error-message: #d50c0c;
